mise à jours1 index.htm
PREPARATION DE L'INDEX

--- a/index.htm
+++ b/index.htm
@@ -203,7 +203,7 @@
                     Accédez aux notes, évaluations et informations scolaires de votre enfant.
                     Consultez les appréciations des enseignants et le suivi pédagogique.
                 </p>
-                <a href="parent.html" class="btn btn-parents">Accéder</a>
+                <a href="PARENTS.html" class="btn btn-parents">Accéder</a>
             </div>
 
             <div class="portal-card">
@@ -213,7 +213,7 @@
                     Saisissez les notes et évaluations, rédigez des appréciations et 
                     consultez les statistiques de vos classes.
                 </p>
-                <a href="enseignant.html" class="btn btn-teachers">Accéder</a>
+                <a href="enseignante.html" class="btn btn-enseignante">Accéder</a>
             </div>
 
             <div class="portal-card">
@@ -223,7 +223,7 @@
                     Tableau de bord complet avec statistiques, gestion des compétences 
                     et identification des élèves en difficulté.
                 </p>
-                <a href="admin.html" class="btn btn-admin">Accéder</a>
+                <a href="Donnée.html" class="btn btn-donnée">Accéder</a>
             </div> <div class="portal-card">
                 <div class="portal-icon">👨‍💼</div>
                 <h2>Espace surveillant</h2>
@@ -231,7 +231,7 @@
                     Tableau de bord complet des retards,absences,cas de maladie, pour la gestion des compétences 
                     et identification des élèves en difficulté.
                 </p>
-                <a href="admin.html" class="btn btn-admin">Accéder</a>
+                <a href="surveille.html" class="btn btn-surveille">Accéder</a>
             </div>
              <div class="portal-card">
                 <div class="portal-icon">👨‍💼</div>
@@ -240,7 +240,7 @@
                     Tableau de bord complet des programmations,journées pédagogiques ,devoirs,compositions;jours féries.  
             
                 </p>
-                <a href="admin.html" class="btn btn-admin">Accéder</a>
+                <a href="les activités pédagogiques.html" class="btn btn-les activités pédagogiques">Accéder</a>
             </div>
 
         </div>
