--- a/index.htm
+++ b/index.htm
@@ -246,6 +246,10 @@
         </div>
     </main>
 
+    <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+  Retour en haut
+</button>
+
     <footer class="footer">
         <p>&copy; 2025-2026 Lycée Niamtougou - Tous droits réservés</p>
         <p>Plateforme développée par l'equipe de développeurs web sous la direction de M. KOLA Maniwah Essohouna; Enseignant des MATHEMATIQUES;Développeur web;programmeur et fondateur du projet  
