--- a/surveille.html
+++ b/surveille.html
@@ -616,6 +616,21 @@
             <div class="school-info">
                 <div class="school-logo">
                     <div class="school-logo-text">LN</div>
+                    <style>
+  .btn-retour {
+    padding: 8px 16px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  .btn-retour:hover {
+    background-color: #e0e0e0;
+  }
+</style>
+
+<button class="btn-retour" onclick="history.back()">← Retour</button>
                 </div>
                 <div class="school-name">Lycée Niamtougou</div>
                 <div class="school-subtitle">Espace Surveillants</div>
