Update les activités pédagogiques.html

--- a/les activités pédagogiques.html
+++ b/les activités pédagogiques.html
@@ -322,17 +322,24 @@
         }
     </style>
 </head>
+     <style>
+  .btn-retour {
+    padding: 8px 16px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  .btn-retour:hover {
+    background-color: #e0e0e0;
+  }
+</style>
+
+<button class="btn-retour" onclick="history.back()">← Retour</button>
 <body>
     <div class="container">
-        <div class="header">
-            <!-- Bouton de retour à l'index -->
-            <a href="index.html" class="return-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-                </svg>
-                Retour
-            </a>
-            
+        <div class="header"   
             <div class="school-info">
                 <div class="school-logo">
                     <div class="school-logo-text">LN</div>
