--- a/les activités pédagogiques.html
+++ b/les activités pédagogiques.html
@@ -326,7 +326,7 @@
     
 <body>
     <div class="container">
-          
+          <div class="header" 
             <div class="school-info">
                 <div class="school-logo">
                     <div class="school-logo-text">LN</div>
