--- a/enseignante.html
+++ b/enseignante.html
@@ -677,6 +677,21 @@
         }
     </style>
 </head>
+    <style>
+  .btn-retour {
+    padding: 8px 16px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  .btn-retour:hover {
+    background-color: #e0e0e0;
+  }
+</style>
+
+<button class="btn-retour" onclick="history.back()">← Retour</button>
 <body>
     <div class="container">
         <div class="header">
