--- a/enseignante.html
+++ b/enseignante.html
@@ -760,16 +760,9 @@
                                     <option value="anglais">Anglais</option>
                                     <option value="allemand">Allemand</option>
                                     <option value="espagnol">Espagnol</option>
-                                    <option value="philosophie">Philosophie</option>
-                                    <option value="litterature">Littérature</option>
+                                    <option value="philosophie">Philosophie</option
                                     <option value="ecm">Éducation Civique et Morale</option>
-                                    <option value="eps">Éducation Physique et Sportive</option>
-                                    <option value="informatique">Informatique</option>
-                                    <option value="arts-plastiques">Arts Plastiques</option>
-                                    <option value="musique">Musique</option>
-                                    <option value="ewe">Éwé</option>
-                                    <option value="kabye">Kabyè</option>
-                                    <option value="mina">Mina</option>
+                                    <option value="eps">Éducation Physique et Sportive</option
                                 </select>
                             </div>
                             <div class="form-group">
@@ -780,14 +773,14 @@
                                     <option value="5eme">5ème</option>
                                     <option value="4eme">4ème</option>
                                     <option value="3eme">3ème</option>
-                                    <option value="seconde-a">Seconde A</option>
-                                    <option value="seconde-c">Seconde C</option>
-                                    <option value="premiere-a1">Première A1</option>
-                                    <option value="premiere-a2">Première A2</option>
+                                    <option value="seconde-l">Seconde L</option>
+                                    <option value="seconde-cd">Seconde CD</option>
+                                    <option value="premiere-a4">Première A4</option>
+                                    <option value="premiere-a5">Première A5</option>
                                     <option value="premiere-c">Première C</option>
                                     <option value="premiere-d">Première D</option>
-                                    <option value="terminale-a1">Terminale A1</option>
-                                    <option value="terminale-a2">Terminale A2</option>
+                                    <option value="terminale-a4">Terminale A4</option>
+                                    <option value="terminale-a5">Terminale A5</option>
                                     <option value="terminale-c">Terminale C</option>
                                     <option value="terminale-d">Terminale D</option>
                                 </select>
@@ -864,8 +857,7 @@
                                 <select id="max-grade" name="max-grade" required>
                                     <option value="20">Sur 20</option>
                                     <option value="10">Sur 10</option>
-                                    <option value="5">Sur 5</option>
-                                    <option value="100">Sur 100</option>
+                                    <option value="5">Sur 5</option> 
                                 </select>
                             </div>
                         </div>
@@ -970,35 +962,35 @@
                 { id: 4, name: "KANDA Tete" },
                 { id: 5, name: "KODJO Mawuli" }
             ],
-            "seconde-a": [
+            "seconde-l": [
                 { id: 1, name: "KOMBATE Kossi" },
                 { id: 2, name: "KONOU Kafui" },
                 { id: 3, name: "KOSSI Mawuko" },
                 { id: 4, name: "KOUVAHEY Kossi" },
                 { id: 5, name: "LOKOSSOU Kossivi" }
             ],
-            "seconde-c": [
+            "seconde-cd": [
                 { id: 1, name: "MADJOU Kossi" },
                 { id: 2, name: "MALOW Batana" },
                 { id: 3, name: "MENSAH Kossi" },
                 { id: 4, name: "MESSAN Kossivi" },
                 { id: 5, name: "N'DIAYE Amina" }
             ],
-            "premiere-a1": [
+            "premiere-a4": [
                 { id: 1, name: "N'DJEHOUA Kossi" },
                 { id: 2, name: "NOUDOKOUN Kossi" },
                 { id: 3, name: "OURO-AKPO Kossi" },
                 { id: 4, name: "SABI Kossi" },
                 { id: 5, name: "SAMA Kossi" }
             ],
-            "premiere-a2": [
+            "premiere-a5": [
                 { id: 1, name: "SEDEGBE Kossi" },
                 { id: 2, name: "SEKONOU Kossi" },
                 { id: 3, name: "SESSOU Kossi" },
                 { id: 4, name: "TCHABI Kossi" },
                 { id: 5, name: "TCHAGBLE Kossi" }
             ],
-            "premiere-c": [
+            "premiere-c4": [
                 { id: 1, name: "TCHAKPELE Kossi" },
                 { id: 2, name: "TCHANILE Kossi" },
                 { id: 3, name: "TCHILOU Kossi" },
@@ -1012,21 +1004,21 @@
                 { id: 4, name: "VOVOR Kossi" },
                 { id: 5, name: "YAOU Kossi" }
             ],
-            "terminale-a1": [
+            "terminale-a4": [
                 { id: 1, name: "ZOUNGRANA Kossi" },
                 { id: 2, name: "ZOUNGRANA Kossi" },
                 { id: 3, name: "ZOUNGRANA Kossi" },
                 { id: 4, name: "ZOUNGRANA Kossi" },
                 { id: 5, name: "ZOUNGRANA Kossi" }
             ],
-            "terminale-a2": [
+            "terminale-a5": [
                 { id: 1, name: "ABALO Kossi" },
                 { id: 2, name: "ADJANOHOUN Kossi" },
                 { id: 3, name: "AGBOKOU Kossi" },
                 { id: 4, name: "AGBOTON Kossi" },
                 { id: 5, name: "AHOLOU Kossi" }
             ],
-            "terminale-c": [
+            "terminale-c4": [
                 { id: 1, name: "AKAKPO Kossi" },
                 { id: 2, name: "AKPABLI Kossi" },
                 { id: 3, name: "ALOKO Kossi" },
@@ -1052,22 +1044,7 @@
                 username: "math_6eme",
                 password: "math123"
             },
-            {
-                id: 2,
-                name: "ADJOBI Awa",
-                subject: "francais",
-                class: "4eme",
-                username: "francais_4eme",
-                password: "francais456"
-            },
-            {
-                id: 3,
-                name: "TCHAKOUDE Kossi",
-                subject: "histoire-geographie",
-                class: "seconde-a",
-                username: "histgeo_seconde",
-                password: "histoire789"
-            }
+            
         ];
 
         // Charger les enseignants depuis le localStorage si disponibles
@@ -1180,15 +1157,8 @@
                 "allemand": "Allemand",
                 "espagnol": "Espagnol",
                 "philosophie": "Philosophie",
-                "litterature": "Littérature",
                 "ecm": "Éducation Civique et Morale",
-                "eps": "Éducation Physique et Sportive",
-                "informatique": "Informatique",
-                "arts-plastiques": "Arts Plastiques",
-                "musique": "Musique",
-                "ewe": "Éwé",
-                "kabye": "Kabyè",
-                "mina": "Mina"
+               
             };
             return subjects[subjectCode] || subjectCode;
         }
@@ -1200,15 +1170,15 @@
                 "5eme": "5ème",
                 "4eme": "4ème",
                 "3eme": "3ème",
-                "seconde-a": "Seconde A",
-                "seconde-c": "Seconde C",
-                "premiere-a1": "Première A1",
-                "premiere-a2": "Première A2",
-                "premiere-c": "Première C",
+                "seconde-l": "Seconde L",
+                "seconde-cd": "Seconde CD",
+                "premiere-a4": "Première A4",
+                "premiere-a5": "Première A5",
+                "premiere-c4": "Première C4",
                 "premiere-d": "Première D",
-                "terminale-a1": "Terminale A1",
-                "terminale-a2": "Terminale A2",
-                "terminale-c": "Terminale C",
+                "terminale-a4": "Terminale A4",
+                "terminale-a5": "Terminale A5",
+                "terminale-c4": "Terminale C4",
                 "terminale-d": "Terminale D"
             };
             return classes[classCode] || classCode;
@@ -1429,7 +1399,7 @@
                     classSelect.appendChild(option);
                 });
             } else if (cycle === 'lycee') {
-                ['seconde-a', 'seconde-c', 'premiere-a1', 'premiere-a2', 'premiere-c', 'premiere-d', 'terminale-a1', 'terminale-a2', 'terminale-c', 'terminale-d'].forEach(cls => {
+                ['seconde-l', 'seconde-cd', 'premiere-a4', 'premiere-a5', 'premiere-c4', 'premiere-d', 'terminale-a4', 'terminale-a5', 'terminale-c4', 'terminale-d'].forEach(cls => {
                     const option = document.createElement('option');
                     option.value = cls;
                     option.textContent = getClassName(cls);
