--- a/enseignante.html
+++ b/enseignante.html
@@ -762,7 +762,7 @@
                                     <option value="espagnol">Espagnol</option>
                                     <option value="philosophie">Philosophie</option
                                     <option value="ecm">Éducation Civique et Morale</option>
-                                    <option value="eps">Éducation Physique et Sportive</option
+                                    <option value="eps">Éducation Physique et Sportive</option>
                                 </select>
                             </div>
                             <div class="form-group">
