--- a/enseignante.html
+++ b/enseignante.html
@@ -777,11 +777,11 @@
                                     <option value="seconde-cd">Seconde CD</option>
                                     <option value="premiere-a4">Première A4</option>
                                     <option value="premiere-a5">Première A5</option>
-                                    <option value="premiere-c">Première C</option>
+                                    <option value="premiere-c4">Première C4</option>
                                     <option value="premiere-d">Première D</option>
                                     <option value="terminale-a4">Terminale A4</option>
                                     <option value="terminale-a5">Terminale A5</option>
-                                    <option value="terminale-c">Terminale C</option>
+                                    <option value="terminale-c4">Terminale C4</option>
                                     <option value="terminale-d">Terminale D</option>
                                 </select>
                             </div>
