--- a/enseignante.html
+++ b/enseignante.html
@@ -1038,7 +1038,7 @@
         let teachers = [
             {
                 id: 1,
-                name: "KOFFI Jean",
+                name: "KOLA Jean",
                 subject: "mathematiques",
                 class: "6eme",
                 username: "math_6eme",
