--- a/PARENTS.html
+++ b/PARENTS.html
@@ -742,15 +742,15 @@
                             <option value="5eme">5ème</option>
                             <option value="4eme">4ème</option>
                             <option value="3eme">3ème</option>
-                            <option value="seconde-a">Seconde A</option>
-                            <option value="seconde-c">Seconde C</option>
-                            <option value="premiere-a1">Première A1</option>
-                            <option value="premiere-a2">Première A2</option>
-                            <option value="premiere-c">Première C</option>
+                            <option value="seconde-l">Seconde L</option>
+                            <option value="seconde-cd">Seconde CD</option>
+                            <option value="premiere-a4">Première A4</option>
+                            <option value="premiere-a5">Première A5</option>
+                            <option value="premiere-c4">Première C4</option>
                             <option value="premiere-d">Première D</option>
-                            <option value="terminale-a1">Terminale A1</option>
-                            <option value="terminale-a2">Terminale A2</option>
-                            <option value="terminale-c">Terminale C</option>
+                            <option value="terminale-a4">Terminale A4</option>
+                            <option value="terminale-a5">Terminale A5</option>
+                            <option value="terminale-c4">Terminale C4</option>
                             <option value="terminale-d">Terminale D</option>
                         </select>
                     </div>
@@ -940,9 +940,9 @@
             {
                 id: 1,
                 name: "Paul DUPONT",
-                email: "paul.dupont@example.com",
-                phone: "+22890123456",
-                password: "parent123",
+                email: "jeanskodoc22@gmail.com",
+                phone: "+22892871605",
+                password: "Kola1",
                 studentName: "Jean DUPONT",
                 studentClass: "3eme"
             },
