--- a/index.htm
+++ b/index.htm
@@ -243,6 +243,16 @@
                 <a href="les activités pédagogiques.html" class="btn btn-les activités pédagogiques">Accéder</a>
             </div>
 
+             <div class="portal-card">
+                <div class="portal-icon">👨‍🏫</div>
+                <h2>Espace Enseignants</h2>
+                <p>
+                    Saisissez les notes et évaluations, rédigez des appréciations et 
+                    consultez les statistiques de vos classes.
+                </p>
+                <a href="enseignante.html" class="btn btn-enseignante">Accéder</a>
+            </div>
+
         </div>
     </main>
 
