--- a/index.htm
+++ b/index.htm
@@ -215,7 +215,14 @@
                 </p>
                 <a href="enseignante.html" class="btn btn-enseignante">Accéder</a>
             </div>
-
+<div class="portal-card">
+                <div class="portal-icon">👨‍🏫</div>
+                <h2>CAHIERS DE TEXTE ET DE PRÉSENCE </h2>
+                <p>
+                    remplirle cahier de texte et de présence; les leçons et exercicede maison.
+                </p>
+                <a href="cahier de travail.html" class="btn btn-enseignante">Accéder</a>
+            </div>
             <div class="portal-card">
                 <div class="portal-icon">👨‍💼</div>
                 <h2>Espace Administration</h2>
